--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=1280">
     <title>김선아 웹 포트폴리오</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/66c9b6e88e.js"crossorigin="anonymous"></script>
@@ -13,7 +14,7 @@
         <header>
             <nav class="gnb">
                 <ul class="menu-list">
-                    <li class="menu-item active">home</li>
+                    <li class="menu-item">home</li>
                     <li class="menu-item">about</li>
                     <li class="menu-item">portfolio</li>
                     <li class="menu-item">contact</li>
@@ -22,22 +23,24 @@
         </header>
         <main>
             <section class="home">
+                <div class="home-wrap">
+                    <div class="title">
+                        <h4>web publisher</h4>
+                        <h1>portfolio</h1>
+                    </div>
+                    <div class="key">
+                        <h3>sminun;</h3>
+                        <p>어느 곳이나 잘 스며들어 어울리는 김선아입니다.<br>부족한 점이 있다면 항상 배우려는 의지를 가지고 채워나가겠습니다</p>
+                    </div>
+                    <div lang="scroll">
+                        <div class="icon-scroll"></div>
+                    </div>               
+                </div>
                 <span class="title-circle"></span>
                 <span class="title-circle2"></span>
                 <span class="title-circle3"></span>
                 <span class="gnb-circle2"></span>
-                <span class="gnb-circle"></span>
-                <div class="title">
-                    <h4>web publisher</h4>
-                    <h1>portfolio</h1>
-                </div>
-                <div class="key">
-                    <h3>sminun;</h3>
-                    <p>어느 곳이나 잘 스며들어 어울리는 김선아입니다</p>
-                </div>
-                <div lang="scroll">
-                    <div class="icon-scroll"></div>
-                </div>               
+                <span class="gnb-circle"></span>            
             </section>
             <section class="about">
                 <div class="about-wrap">
@@ -99,7 +102,7 @@
                                 </div>
                             </li>
                             <li class="skills">
-                                <h3>skills</h3>
+                                <h3>Skills</h3>
                                 <hr>
                                 <div>
                                     <img src="./image/logo/photoshop-mobile.svg" alt="photoshop logo image">
@@ -123,7 +126,7 @@
                         <h1>Arc'teryx</h1>
                     </div>
                     <div class="introduce">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
+                       적응형으로 제작하였습니다.
                     </div>
                     <div class="number">
                         <span>01</span>
@@ -138,11 +141,11 @@
                         <div class="mobile-image">
                            <img src="./image/s_image/아크테릭스 아이폰.png" alt="arc'teryx_mobile">
                         </div>
-                        <div>사용프로그램</div>
+                        <div>html css js</div>
                         <div>참여도 100%</div>
                         <a href="https://tjsdk1260.github.io/arcteryx/"target="_blank" id="clickBtn">사이트 바로가기</a>
                     </div>
-                    <img src="./image/s_image/아크테릭스 전체화면 캡쳐.png" alt="arcteryx_site_image">
+                    <img src="./image/s_image/아크테릭스 전체화면 캡쳐.png" alt="arcteryx_site_image"">
                     <img src="./image/s_image/아크테릭스 전체화면 캡쳐.png" alt="arcteryx_site_image">
                    </div>
                 </article>
@@ -152,7 +155,7 @@
                         <h1>Nonfiction</h1>
                     </div>
                     <div class="introduce">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
+                       사용들에게 도움을 주도록베스트 셀러 제품들을 메인 페이지에 배치해 반응형으로 제작하였습니다.
                     </div>
                     <div class="number">
                         <span>02</span>
@@ -192,88 +195,7 @@
                         <h1>국립재난안전연구원</h1>
                     </div>
                     <div class="introduce">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
-                    </div>
-                    <div class="number">
-                        <span>03</span>
-                        <div>portfolio</div>
-                    </div>
-                </div>
-            </section>
-            <!-- <section class="portfolio">
-                <div class="Arcteryx-sign">
-                    <div class="sign-circle"></div>
-                    <div class="portfolio-title">
-                        <h1>Arc'teryx</h1>
-                    </div>
-                    <div class="introduce">
-                        <div>사용프로그램</div>
-                        <div>참여도 100%</div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
-                    </div>
-                    <div class="number">
-                        <span>01</span>
-                        <div>portfolio</div>
-                    </div>
-                </div>
-                <article class="arcteryx">
-                    <div class="pc">
-                        <div class="mbsite-page">
-                            <img src="./image/s_image/아크테릭스 전체화면 캡쳐.png" alt="arcteryx_사이트_이미지">
-                            <img src="./image/s_image/아크테릭스 전체화면 캡쳐.png" alt="arcteryx_사이트_이미지">
-                        </div>
-                        <div class="arcteryx-mobile">
-                            <h2>Arc'teryx</h2>
-                            <h4>리디자인</h4>
-                            <div class="mobile-image">
-                               <img src="./image/s_image/아크테릭스 아이폰.png" alt="arc'teryx_mobile"></div>
-                            <a href="https://tjsdk1260.github.io/arcteryx/"target="_blank" id="clickBtn">사이트 바로가기</a>
-                        </div>
-                        
-                    </div>
-                </article>
-                <div class="nonfiction-sign">
-                    <div class="sign-circle2"></div>
-                    <div class="portfolio-title">
-                        <h1>Nonfiction</h1>
-                    </div>
-                    <div class="introduce">
-                        <div>사용프로그램</div>
-                        <div>참여도 100%</div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
-                    </div>
-                    <div class="number">
-                        <span>02</span>
-                        <div>portfolio</div>
-                    </div>
-                </div>
-                <article class="nonfiction">
-                    <div class="pc">
-                        <div class="site-page">
-                            <img src="./image/s_image/논픽션 전체화면 캡쳐.png" alt="nonfiction_site_img">
-                            <img src="./image/s_image/논픽션 모바일 전체화면 캡쳐.png" alt="nonfiction_mobile_img">
-                        </div>
-                        <div>
-                            <div class="site-circle"></div>
-                            <h2>Nonfiction</h2>
-                            <h4>리디자인</h4>
-                            <div class="pc-image">
-                                <img src="./image/s_image/논픽션 아이맥&아이폰.png" alt="nonfiction_pc&mobile">
-                            </div>
-                            <button>스토리보드</button>
-                            <a href="https://tjsdk1260.github.io/Nonfiction/" target="_blank" id="clickBtn">사이트 바로가기</a>
-                        </div>
-                    </div>
-                </article>
-                <div class="national-sign">
-                    <div class="sign-circle3"></div>
-                    <div class="portfolio-title">
-                        <h1>Nonfiction</h1>
-                    </div>
-                    <div class="introduce">
-                        <div>사용프로그램</div>
-                        <div>참여도 100%</div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
+                        기존 노후된 사이트를 반응형으로 제작하였습니다.
                     </div>
                     <div class="number">
                         <span>03</span>
@@ -281,26 +203,37 @@
                     </div>
                 </div>
                 <article class="national">
-                    <div class="pc">
-                        <div class="site-page">
-                          <img src="./image/s_image/국립재난안전연구원 전체화면 캡쳐.png" alt="국립재난안전연구원_사이트_이미지">
-                        </div>
-                        <div>
-                            <div class="nat-circle"></div>
+                    <div class="wrap">
+                        <img src="./image/s_image/국립재난안전연구원 전체화면 캡쳐.png" alt="국립재난안전연구원_사이트_이미지" class="pc-image">
+                        <img src="./image/s_image/국립재난안전연구원 모바일 전체화면 캡처.png" alt="국립재난안전연구원_모바일사이트_이미지" class="mb-image">
+                        <div class="site-content">
                             <h2>국립재난안전연구원</h2>
                             <h4>리디자인</h4>
-                            <div class="pc-image">
-                                <img src="./image/s_image/국립재난안전연구원 아이맥&아이폰.png" alt="국립재난안전연구원_pc&mobile">
+                            <div class="site-circle3"></div>
+                            <div class="pcMobile-image">
+                                <img src="./image/s_image/국립재난안전연구원 아이맥&아이폰.png" alt="국립재난안전연구원_pc&mobile" style="width: 700px;">
+                            </div>    
+                            <div>사용프로그램</div>
+                            <div>참여도 100%</div>
+                            <div class="storyboard-wrap">
+                                <label for="modal" class="button">스토리보드</label>
                             </div>
-                            <button>스토리보드</button>
+                            <input type="checkbox" id="modal" class="hidden">
+                            <div class="box-modal">
+                                <label for="modal" class="closer">X</label>
+                                <div class="storyboard">
+                                    <img src="" alt="">
+                                </div>
+                            </div>
                             <a href=" https://tjsdk1260.github.io/National-Disaster-and-Safety-Research-Institute/" target="_blank"  id="clickBtn">사이트 바로가기</a>
                         </div>
                     </div>
                 </article>
-            </section> -->
+            </section>
             <section class="contact">
-                sns 전화번호
-                <div class="contact-circle"></div>
+                깃허브 인스타그램 전화번호
+                본 사이트는 포트폴리오용으로 제작되었습니다
+                &copy;2023Kim Sun-A. All Rights Reserved
             </section>
         </main>
         <footer></footer>
