--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=1280">
     <title>김선아 포트폴리오</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/66c9b6e88e.js"crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -23,15 +25,126 @@
         </header>
         <main>
             <section class="home">
-                <div class="title">Portfolio</div>
+                <div class="main-circle"></div>
+                <div class="main-circle-top"></div>
+                <div class="main-circle-bottom"></div>
+                <div class="title">
+                    <h3>Web Publisher</h3>
+                    <div>Portfolio</div>
+                </div>
                 <div class="scroll">
                     <div class="icon-scroll"></div>
+                    <span>scroll down</span>
+                </div>
+                <div class="name">
+                    Kim Sun A
                 </div>
             </section>
-            <section class="about"></section>
-            <section class="portfolio"></section>
+            <section class="about">
+                <div class="section-title">
+                    About
+                </div>
+                 <div class="about-wrap">
+                    <div class="profile">
+                        <img src="./image/미모티콘.png" alt="memoji">
+                        <div>
+                            <h3>Kim Sun A</h3>
+                            <p>
+                               <div>1999.01.04</div>
+                               <div>010 2652 3106</div>
+                               <div>tjsdk1260@gmail.com</div>
+                            </p>
+                        </div>
+                    </div>
+                    <div>
+                        <ul class="about-list">
+                            <li class="education">
+                                <h3>Education</h3>
+                               <div>
+                                    <h4>2014.03 - 2017.02</h4>
+                                    <p>영주여자고등학교 졸업</p>
+                                    </div>
+                                <div>
+                                    <h4>2017.03 - 2021.02</h4>
+                                    <p>영남대학교 생활제품디자인학과 전공</p>
+                                </div>
+                                <div>
+                                    <h4>2022.03 - 2023.02</h4>
+                                    <p>SBS아카데미컴퓨터학원 수료</p>
+                                </div>
+                            </li> 
+                            <li class="Certificate">
+                                <h3>Certificate</h3>
+                                <div>
+                                    <h4>2010.08</h4>
+                                    <p>ITQ 아래한글 A등급</p>
+                                </div>
+                                <div>
+                                    <h4>2010.12</h4>
+                                    <p>ITQ 한글파워포인트 A등급</p>
+                                </div>
+                                <div>
+                                    <h4>2020.11</h4>
+                                    <p>2종보통 운전면허</p>
+                                </div>
+                                <div>
+                                    <h4>2022.09</h4>
+                                    <p>웹디자인 기능사 필기</p>
+                                </div>
+                            </li>
+                            <li class="experience">
+                                 <h3>Experience</h3>
+                               <div>
+                                    <h4>2019</h4>
+                                    <p>지역 청년 아이디어 챌린지 프로그램 예선 장려상 수상</p>
+                                </div>
+                                <div>
+                                    <h4>2020</h4>
+                                    <p>영남대학교 생활제품디자인학과 졸업 전시회</p>
+                                </div>
+                                <div>
+                                    <h4>2021.03 - 2021.07</h4>
+                                    <p>SK스페셜티 사무보조</p>
+                                </div>
+                                <div>
+                                    <h4>2021.08 - 2022.05</h4>
+                                    <p>삭스어필(주) 그래픽 디자이너</p>
+                                </div>
+                            </li>
+                           
+                            <li class="skills">
+                                <h3>Skills</h3>
+                                <div>
+                                    <div>Photoshop</div>
+                                    <div>Illustrator</div>
+                                    <div>Html</div>
+                                    <div>Css</div>
+                                    <div>Jquery</div>
+                                    <div>Javascript</div>
+                                </div>
+                            </li>
+                         </ul>
+                    </div>            
+            </section>
+            <section class="portfolio">
+                <div class="number">01</div>
+                <div class="section-title">
+                    Arcteryx
+                </div>
+                <div class="portfolio-content">
+                    <a href="">사이트 바로가기</a>
+                    <p class="introduce">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex incidunt eos similique aspernatur esse fugit ea doloribus error architecto voluptas quisquam quasi, natus culpa voluptate ut neque itaque mollitia? Vel?
+                    </p>
+                </div>
+                <div class="mockup">
+                    <img src="" alt="">
+                </div>
+            </section>
         </main>
-        <footer class="contact"></footer>
+        <footer class="contact">
+            <!-- <a href="https://github.com/tjsdk1260" target="_blank"><i class="fa-brands fa-github"></i></a> -->
+        </footer>
     </div>
     <script src="index.js"></script>
 </body>
